keycloak/keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    route.openshift.io/termination: edge
  labels:
    app: keycloak
    app.kubernetes.io/instance: akademia-kc
    app.kubernetes.io/managed-by: keycloak-operator
  name: akademia-kc-ingress-test
  namespace: default
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: akademia-kc-service
      port:
        number: 8080
  tls:
  - hosts:
    - auth.akademia.cc
    - akademia-auth.arctix.dev
    secretName: auth-akademia-cc-tls
  rules:
    - host: auth.akademia.cc
      http:
        paths:
          - backend:
              service:
                name: akademia-kc-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
    - host: akademia-auth.arctix.dev
      http:
        paths:
          - backend:
              service:
                name: akademia-kc-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
